--- a/tht/index.html
+++ b/tht/index.html
@@ -3,10 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title>The Hague Tech</title>
+    <title>VR Lab - The Hague Tech</title>
     <meta name="description" content="The Hague Tech">
     <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
-
 
 </head>
 
@@ -19,7 +18,6 @@
 
     <a-scene background="color: #FAFAFA">
 
-
         <a-entity>
             <a-animation attribute="rotation" easing="linear" dur="6000" to="0 360 0" repeat="indefinite">
             </a-animation>
@@ -30,9 +28,6 @@
         </a-entity>
 
         <a-entity camera="active: true" look-controls wasd-controls position="0 1 2" data-aframe-default-camera></a-entity>
-
-
-
 
     </a-scene>
 </body>
