--- a/tht/index.html
+++ b/tht/index.html
@@ -6,6 +6,8 @@
     <title>VR Lab - The Hague Tech</title>
     <meta name="description" content="The Hague Tech">
     <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
+    <link rel="icon" type="image/png" href="favicon.png">
+
 
 </head>
 
