supercraft-shooter added to portfolio

--- a/index.html
+++ b/index.html
@@ -224,16 +224,16 @@
                         </div>
                     </a>
                     <!-- Portfolio item-->
-                    <!-- <a href="pages/portfolio-single-2.html" class="grid-item large">
+                    <a href="https://febebv-supercraft-shooter.glitch.me/" target="_blank" class="grid-item large">
                         <div style="background-image: url(images/thumbs/06.png)" class="thumb"></div>
                         <div class="caption">
-                            <div class="type">Photography</div>
+                            <div class="type">WebVR & A-Frame</div>
                             <div class="description">
-                                <h4>Land of God #2</h4>
-                                <p>We bring ideas to live. Lorem ipsum dolor sit amet.</p>
+                                <h4>Supercraft-shooter</h4>
+                                <p>Design your own VR Shooter Game elements with Supercraft.</p>
                             </div>
                         </div>
-                    </a> -->
+                    </a>
                     <!-- Portfolio item-->
                     <!-- <a href="pages/portfolio-single.html" class="grid-item">
                         <div style="background-image: url(images/portraits/02.jpg)" class="thumb"></div>
