--- a/tht/index.html
+++ b/tht/index.html
@@ -18,9 +18,9 @@
         <a-asset-item id="THT-mtl" src="THTlogo.mtl"></a-asset-item>
     </a-assets>
 
-    <a-scene background="color: #FAFAFA">
+    <a-scene vr-mode-ui="enabled: false" background="color: #FAFAFA">
 
-        <a-entity>
+        <a-entity position="0 0 -0.25">
             <a-animation attribute="rotation" easing="linear" dur="6000" to="0 360 0" repeat="indefinite">
             </a-animation>
             <a-entity rotation="0 0 0">
