--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/custom.css">
     <link rel="icon" type="image/png" href="favicon.png">
     <script src="js/assets/jquery.js"></script>
-    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
 </head>
 
 <body>
@@ -105,12 +105,28 @@
                     <!-- Content-->
                     <!-- <div class="content" id="myEmbeddedScene"> -->
 
-
-                    <a-scene background="color: #EEE" embedded>
+                    <!-- <a-scene background="color: #EEE" embedded>
                         <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" shadow=""></a-box>
                         <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E" shadow=""></a-sphere>
                         <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D" shadow=""></a-cylinder>
                         <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" shadow=""></a-plane>
+                    </a-scene> -->
+
+                    <a-assets embedded>
+                        <a-asset-item id="THT-obj" src="THTlogo.obj"></a-asset-item>
+                        <a-asset-item id="THT-mtl" src="THTlogo.mtl"></a-asset-item>
+                    </a-assets>
+
+                    <a-scene vr-mode-ui="enabled: false" background="color: #FAFAFA" embedded>
+                        <a-entity position="0 0 -1">
+                            <a-animation attribute="rotation" easing="linear" dur="6000" to="0 360 0" repeat="indefinite">
+                            </a-animation>
+                            <a-entity rotation="0 0 0">
+                                <a-obj-model src="#THT-obj" mtl="#THT-mtl">
+                                </a-obj-model>
+                            </a-entity>
+                        </a-entity>
+                        <a-entity camera="active: true" look-controls wasd-controls position="0 1 2" data-aframe-default-camera></a-entity>
                     </a-scene>
                     <!-- </div> -->
                 </div>
@@ -124,11 +140,11 @@
                             <h5>To the VR Lab @ The Hague Tech</h5>
                         </div>
                         <p>
-                            The VR Lab @ The Hague Tech consists of a bunch of VR hackers, developers and enthusiasts based at the co-working space The Hague Tech.
+                            The VR Lab consists of a bunch of VR hackers, developers and business professionals based at the co-working space The Hague Tech.
                             <br>
-                            <br>We host meet-ups, create workshops and masterclasses, and organise gaming nights to blow off some steam.
+                            <br>We host meet-ups, create workshops and masterclasses, and are in pursuit of finding new and unique business opportunities with VR/AR and MR technology. We also organise gaming nights to blow off some steam.
                             <br>
-                            <br> Feel free to join us!
+                            <br> Feel free to join!
                         </p>
                     </div>
                 </div>
@@ -218,7 +234,7 @@
                         <div class="caption">
                             <div class="type">WebVR & A-Frame</div>
                             <div class="description">
-                                <h4>THT Lgo</h4>
+                                <h4>THT Logo</h4>
                                 <p>The Hague Tech Logo in VR.</p>
                             </div>
                         </div>
