--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <section>
             <div class="container">
                 <div class="intro">
-                    <h3>Projects</h3>
+                    <h3>Featured Projects</h3>
                 </div>
                 <!-- Portfolio grid-->
                 <div class="grid">
