--- a/community/index.html
+++ b/community/index.html
@@ -18,7 +18,11 @@
 
     <a-scene>
         <!-- Camera -->
-        <a-camera position="0 5 0" wasd-controls="acceleration:10000"></a-camera>
+        <a-camera position="0 10 300" wasd-controls="acceleration:10000">
+            <a-box height="2" width="2" depth="0.5" position="7 -5 -10" material="color: #FFFFFF"></a-box>
+            <a-box height="2" width="2" depth="0.5" position="0 -5 -10" material="color: #EEEEEE"></a-box>
+            <a-box height="2" width="2" depth="0.5" position="-7 -5 -10" material="color: #BBBBBB"></a-box>
+        </a-camera>
 
         <!-- Assets -->
         <!-- <a-asset-item id="THT-obj" src="THTlogo.obj"></a-asset-item>
@@ -28,6 +32,7 @@
             <img id="grid-light-blue" src="grid-light-blue.png" crossorigin="anonymous">
             <img id="sky" src="sky-grey.png" crossorigin="anonymous" />
         </a-assets>
+
 
         <!-- 3d Model -->
         <!-- <a-entity scale="100 100 100" position="0 0 -500">
@@ -41,10 +46,10 @@
 
         <!-- Data -->
 
-        <a-entity forcegraph="json-url: community.json; node-auto-color-by: 'val' "></a-entity>
+        <a-entity position="0 0 0" forcegraph="json-url: Sales_2.json; node-auto-color-by: 'color'; nodeVal: 'size'; linkWidth: 'size'"></a-entity>
 
         <!-- Environment -->
-        <a-entity visible="true" position="0 0 0 " geometry="primitive: plane; width: 10000; height: 10000; " rotation="-90 0 0 " material="src: #grid-light-blue; repeat: 10000 10000; transparent: true; metalness:0.6; roughness: 0.4; sphericalEnvMap: #sky; "></a-entity>
+        <a-entity position="0 -50 0" visible="true" position="0 0 0 " geometry="primitive: plane; width: 10000; height: 10000; " rotation="-90 0 0 " material="src: #grid-light-blue; repeat: 10000 10000; transparent: true; metalness:0.6; roughness: 0.4; sphericalEnvMap: #sky; "></a-entity>
         <a-entity light="color: #ccccff; intensity: 1; type: ambient; " visible="true"></a-entity>
         <a-entity light="color: #ffaaff; intensity: 1.5 " position="5 5 5 "></a-entity>
 
